# cmake-cpp-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  main_benchmarks.cpp
src/: CMakeLists.txt  main.cpp  main.h
test/: CMakeLists.txt  main_tests.cpp
